--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,4 +18,5 @@ workflows:
             attach-workspace: false 
             checkout: false 
         - terraform/plan:
-            var: TF_VAR_AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID, TF_VAR_AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+            var: AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+            out: plan.out
